--- a/.prettierrc
+++ b/.prettierrc
@@ -6,6 +6,6 @@
   "semi": false,
   "singleQuote": true,
   "quoteProps": "as-needed",
-  "trailingComma": "es5",
+  "trailingComma": "none",
   "bracketSpacing": true
 }
