--- a/.prettierrc
+++ b/.prettierrc
@@ -5,7 +5,8 @@
   "tabWidth": 2,
   "semi": false,
   "singleQuote": true,
-  "quoteProps": "as-needed",
+  "quoteProps": "consistent",
   "trailingComma": "none",
-  "bracketSpacing": true
+  "bracketSpacing": true,
+  "singleAttributePerLine": true
 }
