--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "google-auth-library": "^8.5.2",
+    "lodash": "^4.17.21",
     "mongoose": "^6.6.5"
   }
 }
