--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "prettier": "^2.7.1"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "google-auth-library": "^8.5.2",
     "lodash": "^4.17.21",
-    "mongoose": "^6.6.5"
+    "mongoose": "^6.6.5",
+    "nodemailer": "^6.8.0"
   }
 }
