--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "google-auth-library": "^8.5.2",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.6.5",
     "nodemailer": "^6.8.0"
