--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "prettier": "^2.7.1"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
