--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "google-auth-library": "^8.5.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "mongoose": "^6.6.5",
     "nodemailer": "^6.8.0"
   }
