--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "mongoose": "^6.6.5",
+    "node-cron": "^3.0.2",
     "nodemailer": "^6.8.0"
   }
 }
