--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "prettier": "^2.7.1"
   },
   "dependencies": {
-    "axios": "^1.1.3",
+    "@aws-sdk/client-s3": "^3.341.0",
+    "axios": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
     "express-validator": "^6.14.2",
     "google-auth-library": "^8.5.2",
     "jsonwebtoken": "^8.5.1",
@@ -40,6 +42,7 @@
     "moment": "^2.29.4",
     "mongoose": "^6.6.5",
     "node-cron": "^3.0.2",
-    "nodemailer": "^6.8.0"
+    "nodemailer": "^6.8.0",
+    "sharp": "^0.32.1"
   }
 }
